# crewaiCS

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/automated_crew_for_content_research_and_script_creation/: crew.py  main.py
src/automated_crew_for_content_research_and_script_creation/config/: agents.yaml  tasks.yaml
src/automated_crew_for_research_and_content_creation/: crew.py  main.py
src/automated_crew_for_research_and_content_creation/config/: agents.yaml  tasks.yaml
